--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -111,7 +111,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -142,6 +142,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "photo-gallery"
+    }
+  },
+  "defaultProject": "photo-gallery",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
