--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "uuidv4": "^5.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
